DHFPROD-5312: Make a (tile height + footer) fit into 100% of the page to avoid activating page scrollbar

--- a/marklogic-data-hub-central/ui/src/App.scss
+++ b/marklogic-data-hub-central/ui/src/App.scss
@@ -17,7 +17,7 @@ body {
   position: relative;
   margin-right: 70px;
   overflow-y: auto;
-  height: 100vh;
+  height: 90vh;
   max-height: 92vh;
 }
 
@@ -44,7 +44,7 @@ main {
 .ant-layout-footer {
   display: flex;
   justify-content: center;
-  padding: 30px 0;
+  padding: 50px 0 0 0;
   margin: 0;
   background-color: transparent;
 }
